--- a/Final Assignment EPA1361/Model and Notebooks/4. Scenario Discovery.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/4. Scenario Discovery.ipynb
@@ -12,7 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\EPA\\Advanced_simulation\\EPA1361_Model-based_Decision-making\\Lib\\site-packages\\ema_workbench\\analysis\\prim.py:30: ImportWarning: altair based interactive inspection not available\n",
+      "  warnings.warn((\"altair based interactive \" \"inspection not available\"), ImportWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "#   import packages\n",
     "import numpy as np\n",
@@ -48,8 +57,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T16:01:22.050148800Z",
-     "start_time": "2023-06-16T16:01:18.460378400Z"
+     "end_time": "2023-06-19T10:10:34.333793Z",
+     "start_time": "2023-06-19T10:10:30.752812Z"
     }
    }
   },
@@ -74,8 +83,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T16:01:22.063670500Z",
-     "start_time": "2023-06-16T16:01:22.037165Z"
+     "end_time": "2023-06-19T10:10:34.367735Z",
+     "start_time": "2023-06-19T10:10:34.335793200Z"
     }
    }
   },
@@ -102,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -165,8 +174,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T16:03:03.082104400Z",
-     "start_time": "2023-06-16T16:02:59.474882800Z"
+     "end_time": "2023-06-19T10:10:48.494510400Z",
+     "start_time": "2023-06-19T10:10:34.370735500Z"
     }
    }
   },
@@ -178,8 +187,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T16:01:26.314437300Z",
-     "start_time": "2023-06-16T16:01:26.287640300Z"
+     "end_time": "2023-06-19T10:10:48.501528700Z",
+     "start_time": "2023-06-19T10:10:48.496510100Z"
     }
    }
   }
