--- a/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
@@ -171,7 +171,7 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "n_scenarios = int(1000)"
+    "n_scenarios = int(1000) # naar 5000 veranderen"
    ],
    "metadata": {
     "collapsed": false,
