--- a/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
@@ -20,17 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\EPA\\Advanced_simulation\\EPA1361_Model-based_Decision-making\\Lib\\site-packages\\ema_workbench\\analysis\\prim.py:30: ImportWarning: altair based interactive inspection not available\n",
-      "  warnings.warn((\"altair based interactive \" \"inspection not available\"), ImportWarning)\n"
-     ]
-    }
-   ],
+   "execution_count": 2,
+   "outputs": [],
    "source": [
     "#   import packages\n",
     "import numpy as np\n",
@@ -66,8 +57,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-19T07:41:30.234882400Z",
-     "start_time": "2023-06-19T07:41:24.103573500Z"
+     "end_time": "2023-06-20T16:22:38.811191300Z",
+     "start_time": "2023-06-20T16:22:38.719268600Z"
     }
    }
   },
@@ -82,13 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "<Logger EMA (DEBUG)>"
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,8 +91,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-19T07:41:31.090222600Z",
-     "start_time": "2023-06-19T07:41:30.233882100Z"
+     "end_time": "2023-06-20T16:22:39.544356500Z",
+     "start_time": "2023-06-20T16:22:38.725869600Z"
     }
    }
   },
@@ -116,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "pareto_policies = pd.read_pickle(r'../generated_datasets/initial_Pareto_policies.pkl')"
@@ -124,8 +115,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-19T07:41:31.091222700Z",
-     "start_time": "2023-06-19T07:41:31.089225100Z"
+     "end_time": "2023-06-20T16:22:39.548779400Z",
+     "start_time": "2023-06-20T16:22:39.545363700Z"
     }
    }
   },
@@ -140,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "policies = []\n",
@@ -152,8 +143,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-19T07:41:31.204538500Z",
-     "start_time": "2023-06-19T07:41:31.092217Z"
+     "end_time": "2023-06-20T16:22:39.561681800Z",
+     "start_time": "2023-06-20T16:22:39.551784300Z"
     }
    }
   },
@@ -168,16 +159,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "n_scenarios = int(1000) # naar 5000 veranderen"
+    "n_scenarios = int(5_000) # naar 5000 veranderen"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-19T07:41:31.224530300Z",
-     "start_time": "2023-06-19T07:41:31.126054500Z"
+     "end_time": "2023-06-20T16:22:39.566534Z",
+     "start_time": "2023-06-20T16:22:39.565018200Z"
     }
    }
   },
@@ -192,17 +183,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "[MainProcess/INFO] pool started with 12 workers\n",
-      "[MainProcess/INFO] performing 1000 scenarios * 67 policies * 1 model(s) = 67000 experiments\n",
-      "100%|██████████████████████████████████| 67000/67000 [1:37:56<00:00, 11.40it/s]\n",
-      "[MainProcess/INFO] experiments finished\n",
-      "[MainProcess/INFO] terminating pool\n"
+      "[MainProcess/INFO] performing 5000 scenarios * 45 policies * 1 model(s) = 225000 experiments\n",
+      "  0%|▏                                 | 1085/225000 [02:02<8:33:46,  7.26it/s]"
      ]
     }
    ],
@@ -219,8 +208,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-19T09:20:15.529062700Z",
-     "start_time": "2023-06-19T07:41:31.129562500Z"
+     "start_time": "2023-06-20T16:22:39.569039600Z"
     }
    }
   },
@@ -235,18 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "scenario_results = pd.read_pickle(r'../generated_datasets/policy_uncertainty_test.pkl')\n",
     "experiments, outcomes = scenario_results"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-19T09:20:15.566701600Z",
-     "start_time": "2023-06-19T09:20:15.531058Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -260,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "policies_all_scenarios = pd.DataFrame()\n",
@@ -269,11 +253,7 @@
     "    policies_all_scenarios = pd.concat([policies_all_scenarios, temp_df], axis=1)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-19T09:20:15.695873Z",
-     "start_time": "2023-06-19T09:20:15.556529100Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -287,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "experiments_and_results = pd.concat([experiments,policies_all_scenarios], axis=1)\n",
@@ -296,11 +276,7 @@
     "    pickle.dump(experiments_and_results, file_pi)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-19T09:20:15.795864300Z",
-     "start_time": "2023-06-19T09:20:15.685633200Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -314,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def combine_columns(dataframe, name):\n",
@@ -326,16 +302,12 @@
     "    dataframe['Total ' + str(name)] = dataframe[combined_columns].sum(axis=1)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-19T09:20:15.800994300Z",
-     "start_time": "2023-06-19T09:20:15.797862300Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "combine_columns(policies_all_scenarios, 'Expected Annual Damage')\n",
@@ -345,11 +317,7 @@
     "combine_columns(policies_all_scenarios, 'Expected Evacuation Costs')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-19T09:20:15.895171700Z",
-     "start_time": "2023-06-19T09:20:15.801994400Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -363,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "aggregated_outcomes = pd.concat([experiments[['scenario','policy']],policies_all_scenarios.iloc[:,-5:]], axis=1)\n",
@@ -377,11 +345,7 @@
     "    pickle.dump(aggregated_outcomes, file_pi)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-19T09:20:15.957636600Z",
-     "start_time": "2023-06-19T09:20:15.899183500Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -395,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def combine_columns_province(dataframe, name):\n",
@@ -412,16 +376,12 @@
     "    dataframe['Total ' + str(name) + ' Overijssel'] = dataframe[combined_columns_overijssel].sum(axis=1)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-19T09:20:15.964773300Z",
-     "start_time": "2023-06-19T09:20:15.961111300Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "provinces = policies_all_scenarios.copy()\n",
@@ -433,16 +393,12 @@
     "combine_columns_province(provinces, 'Expected Evacuation Costs')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-19T09:20:16.089558500Z",
-     "start_time": "2023-06-19T09:20:15.964773300Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "aggregated_outcomes_provinces = pd.concat([experiments[['scenario','policy']],provinces.iloc[:,-10:]], axis=1)\n",
@@ -451,24 +407,16 @@
     "    pickle.dump(aggregated_outcomes_provinces, file_pi)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-19T09:20:16.148634700Z",
-     "start_time": "2023-06-19T09:20:16.090558700Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-19T09:20:16.148634700Z",
-     "start_time": "2023-06-19T09:20:16.125776700Z"
-    }
+    "collapsed": false
    }
   }
  ],
