--- a/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
@@ -20,8 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\EPA\\Y1\\Q4\\Model based des\\venv_model_based\\Lib\\site-packages\\ema_workbench\\analysis\\prim.py:30: ImportWarning: altair based interactive inspection not available\n",
+      "  warnings.warn((\"altair based interactive \" \"inspection not available\"), ImportWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "#   import packages\n",
     "import numpy as np\n",
@@ -57,8 +66,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-20T16:22:38.811191300Z",
-     "start_time": "2023-06-20T16:22:38.719268600Z"
+     "end_time": "2023-06-20T19:15:00.762075800Z",
+     "start_time": "2023-06-20T19:14:57.210223Z"
     }
    }
   },
@@ -73,13 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "<Logger EMA (DEBUG)>"
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,8 +100,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-20T16:22:39.544356500Z",
-     "start_time": "2023-06-20T16:22:38.725869600Z"
+     "end_time": "2023-06-20T19:15:01.397966300Z",
+     "start_time": "2023-06-20T19:15:00.762075800Z"
     }
    }
   },
@@ -107,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "pareto_policies = pd.read_pickle(r'../generated_datasets/initial_Pareto_policies.pkl')"
@@ -115,8 +124,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-20T16:22:39.548779400Z",
-     "start_time": "2023-06-20T16:22:39.545363700Z"
+     "end_time": "2023-06-20T19:15:01.405759700Z",
+     "start_time": "2023-06-20T19:15:01.397966300Z"
     }
    }
   },
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "policies = []\n",
@@ -143,8 +152,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-20T16:22:39.561681800Z",
-     "start_time": "2023-06-20T16:22:39.551784300Z"
+     "end_time": "2023-06-20T19:15:01.452756700Z",
+     "start_time": "2023-06-20T19:15:01.405759700Z"
     }
    }
   },
@@ -159,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "n_scenarios = int(10_000) # naar 5000 veranderen"
@@ -167,8 +176,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-20T16:22:39.566534Z",
-     "start_time": "2023-06-20T16:22:39.565018200Z"
+     "end_time": "2023-06-20T19:15:01.452756700Z",
+     "start_time": "2023-06-20T19:15:01.431983200Z"
     }
    }
   },
@@ -190,8 +199,8 @@
      "output_type": "stream",
      "text": [
       "[MainProcess/INFO] pool started with 12 workers\n",
-      "[MainProcess/INFO] performing 5000 scenarios * 45 policies * 1 model(s) = 225000 experiments\n",
-      "  0%|▏                                 | 1085/225000 [02:02<8:33:46,  7.26it/s]"
+      "[MainProcess/INFO] performing 10000 scenarios * 45 policies * 1 model(s) = 450000 experiments\n",
+      "  0%|                                  | 163/450000 [00:16<10:34:08, 11.82it/s]"
      ]
     }
    ],
@@ -207,8 +216,9 @@
    ],
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2023-06-20T16:22:39.569039600Z"
+     "start_time": "2023-06-20T19:15:01.452756700Z"
     }
    }
   },
@@ -230,7 +240,8 @@
     "experiments, outcomes = scenario_results"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   },
   {
@@ -253,7 +264,8 @@
     "    policies_all_scenarios = pd.concat([policies_all_scenarios, temp_df], axis=1)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   },
   {
@@ -276,7 +288,8 @@
     "    pickle.dump(experiments_and_results, file_pi)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   },
   {
@@ -302,7 +315,8 @@
     "    dataframe['Total ' + str(name)] = dataframe[combined_columns].sum(axis=1)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   },
   {
@@ -317,7 +331,8 @@
     "combine_columns(policies_all_scenarios, 'Expected Evacuation Costs')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   },
   {
@@ -345,7 +360,8 @@
     "    pickle.dump(aggregated_outcomes, file_pi)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   },
   {
@@ -376,7 +392,8 @@
     "    dataframe['Total ' + str(name) + ' Overijssel'] = dataframe[combined_columns_overijssel].sum(axis=1)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   },
   {
@@ -393,7 +410,8 @@
     "combine_columns_province(provinces, 'Expected Evacuation Costs')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   },
   {
@@ -407,7 +425,8 @@
     "    pickle.dump(aggregated_outcomes_provinces, file_pi)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   },
   {
@@ -416,7 +435,8 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   }
  ],
