--- a/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
@@ -162,7 +162,7 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "n_scenarios = int(10_000) # naar 5000 veranderen"
+    "n_scenarios = int(10_000)"
    ],
    "metadata": {
     "collapsed": false,
