--- a/Final Assignment EPA1361/Model and Notebooks/4. Scenario Discovery.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/4. Scenario Discovery.ipynb
@@ -117,8 +117,6 @@
     "        test_list.append(t)\n",
     "    results_df[k]=test_list\n",
     "\n",
-    "\n",
-    "\n",
     "results_df"
    ],
    "metadata": {
@@ -268,7 +266,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Generate outcome"
+    "### Generate outcome optimal for Overijssel"
    ],
    "metadata": {
     "collapsed": false
@@ -276,14 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "outputs": [
     {
      "data": {
       "text/plain": "       RfR Total Costs  Expected Evacuation Costs   \n10153              0.0                        0.0  \\\n10004              0.0                        0.0   \n10718              0.0                        0.0   \n10717              0.0                        0.0   \n10942              0.0                        0.0   \n\n       Total Expected Annual Damage Gelderland   \n10153                             1.466074e+09  \\\n10004                             7.806502e+08   \n10718                             1.774258e+09   \n10717                             1.229246e+09   \n10942                             2.527842e+09   \n\n       Total Expected Annual Damage Overijssel   \n10153                                      0.0  \\\n10004                                      0.0   \n10718                                      0.0   \n10717                                      0.0   \n10942                                      0.0   \n\n       Total Dike Investment Costs Gelderland   \n10153                            2.399554e+08  \\\n10004                            2.399554e+08   \n10718                            2.399554e+08   \n10717                            2.399554e+08   \n10942                            2.399554e+08   \n\n       Total Dike Investment Costs Overijssel  Total Deaths_Cost Gelderland   \n10153                                     0.0                  1.808713e+07  \\\n10004                                     0.0                  9.854233e+06   \n10718                                     0.0                  1.769794e+07   \n10717                                     0.0                  1.794797e+07   \n10942                                     0.0                  1.251653e+07   \n\n       Total Deaths_Cost Overijssel  total_cost[€]  total_cost[€]_overijssel  \n10153                           0.0   1.724117e+09                       0.0  \n10004                           0.0   1.030460e+09                       0.0  \n10718                           0.0   2.031912e+09                       0.0  \n10717                           0.0   1.487149e+09                       0.0  \n10942                           0.0   2.780314e+09                       0.0  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>RfR Total Costs</th>\n      <th>Expected Evacuation Costs</th>\n      <th>Total Expected Annual Damage Gelderland</th>\n      <th>Total Expected Annual Damage Overijssel</th>\n      <th>Total Dike Investment Costs Gelderland</th>\n      <th>Total Dike Investment Costs Overijssel</th>\n      <th>Total Deaths_Cost Gelderland</th>\n      <th>Total Deaths_Cost Overijssel</th>\n      <th>total_cost[€]</th>\n      <th>total_cost[€]_overijssel</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>10153</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.466074e+09</td>\n      <td>0.0</td>\n      <td>2.399554e+08</td>\n      <td>0.0</td>\n      <td>1.808713e+07</td>\n      <td>0.0</td>\n      <td>1.724117e+09</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>10004</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>7.806502e+08</td>\n      <td>0.0</td>\n      <td>2.399554e+08</td>\n      <td>0.0</td>\n      <td>9.854233e+06</td>\n      <td>0.0</td>\n      <td>1.030460e+09</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>10718</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.774258e+09</td>\n      <td>0.0</td>\n      <td>2.399554e+08</td>\n      <td>0.0</td>\n      <td>1.769794e+07</td>\n      <td>0.0</td>\n      <td>2.031912e+09</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>10717</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.229246e+09</td>\n      <td>0.0</td>\n      <td>2.399554e+08</td>\n      <td>0.0</td>\n      <td>1.794797e+07</td>\n      <td>0.0</td>\n      <td>1.487149e+09</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>10942</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>2.527842e+09</td>\n      <td>0.0</td>\n      <td>2.399554e+08</td>\n      <td>0.0</td>\n      <td>1.251653e+07</td>\n      <td>0.0</td>\n      <td>2.780314e+09</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 95,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,6 +291,47 @@
     "\n",
     "results_of_interest = aggregated_outcomes_provinces.sort_values(by='total_cost[€]_overijssel', ascending=True).head(n_scenarios_of_interest)\n",
     "\n",
+    "with open(r'..\\generated_datasets\\final_policies_overijssel.pkl','wb') as pickle_file:\n",
+    "    pickle.dump(results_of_interest, pickle_file)\n",
+    "\n",
+    "results_of_interest"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-21T09:33:49.278572400Z",
+     "start_time": "2023-06-21T09:33:49.243367700Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Generate outcome optimal for Gelderland and Overijssel combined."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       RfR Total Costs  Expected Evacuation Costs   \n46168              0.0                1091.291595  \\\n46279              0.0                1031.516199   \n46099              0.0                1547.899340   \n46162              0.0                1514.935674   \n46468              0.0                2204.888753   \n\n       Total Expected Annual Damage Gelderland   \n46168                             5.996380e+06  \\\n46279                             1.359283e+07   \n46099                             1.040607e+07   \n46162                             1.686334e+07   \n46468                             1.354374e+07   \n\n       Total Expected Annual Damage Overijssel   \n46168                             1.259604e+07  \\\n46279                             1.500558e+07   \n46099                             1.963150e+07   \n46162                             1.922814e+07   \n46468                             2.326346e+07   \n\n       Total Dike Investment Costs Gelderland   \n46168                            2.192581e+08  \\\n46279                            2.192581e+08   \n46099                            2.192581e+08   \n46162                            2.192581e+08   \n46468                            2.192581e+08   \n\n       Total Dike Investment Costs Overijssel  Total Deaths_Cost Gelderland   \n46168                                     0.0                  13130.164696  \\\n46279                                     0.0                   9379.099391   \n46099                                     0.0                  11660.359848   \n46162                                     0.0                  11557.108157   \n46468                                     0.0                  15023.981315   \n\n       Total Deaths_Cost Overijssel  total_cost[€]  total_cost[€]_overijssel  \n46168                   7226.065362   2.378719e+08              1.260436e+07  \n46279                   6215.012226   2.478731e+08              1.501282e+07  \n46099                   9365.151806   2.493182e+08              1.964241e+07  \n46162                  15437.227596   2.553780e+08              1.924509e+07  \n46468                  12454.073843   2.560949e+08              2.327812e+07  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>RfR Total Costs</th>\n      <th>Expected Evacuation Costs</th>\n      <th>Total Expected Annual Damage Gelderland</th>\n      <th>Total Expected Annual Damage Overijssel</th>\n      <th>Total Dike Investment Costs Gelderland</th>\n      <th>Total Dike Investment Costs Overijssel</th>\n      <th>Total Deaths_Cost Gelderland</th>\n      <th>Total Deaths_Cost Overijssel</th>\n      <th>total_cost[€]</th>\n      <th>total_cost[€]_overijssel</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>46168</th>\n      <td>0.0</td>\n      <td>1091.291595</td>\n      <td>5.996380e+06</td>\n      <td>1.259604e+07</td>\n      <td>2.192581e+08</td>\n      <td>0.0</td>\n      <td>13130.164696</td>\n      <td>7226.065362</td>\n      <td>2.378719e+08</td>\n      <td>1.260436e+07</td>\n    </tr>\n    <tr>\n      <th>46279</th>\n      <td>0.0</td>\n      <td>1031.516199</td>\n      <td>1.359283e+07</td>\n      <td>1.500558e+07</td>\n      <td>2.192581e+08</td>\n      <td>0.0</td>\n      <td>9379.099391</td>\n      <td>6215.012226</td>\n      <td>2.478731e+08</td>\n      <td>1.501282e+07</td>\n    </tr>\n    <tr>\n      <th>46099</th>\n      <td>0.0</td>\n      <td>1547.899340</td>\n      <td>1.040607e+07</td>\n      <td>1.963150e+07</td>\n      <td>2.192581e+08</td>\n      <td>0.0</td>\n      <td>11660.359848</td>\n      <td>9365.151806</td>\n      <td>2.493182e+08</td>\n      <td>1.964241e+07</td>\n    </tr>\n    <tr>\n      <th>46162</th>\n      <td>0.0</td>\n      <td>1514.935674</td>\n      <td>1.686334e+07</td>\n      <td>1.922814e+07</td>\n      <td>2.192581e+08</td>\n      <td>0.0</td>\n      <td>11557.108157</td>\n      <td>15437.227596</td>\n      <td>2.553780e+08</td>\n      <td>1.924509e+07</td>\n    </tr>\n    <tr>\n      <th>46468</th>\n      <td>0.0</td>\n      <td>2204.888753</td>\n      <td>1.354374e+07</td>\n      <td>2.326346e+07</td>\n      <td>2.192581e+08</td>\n      <td>0.0</td>\n      <td>15023.981315</td>\n      <td>12454.073843</td>\n      <td>2.560949e+08</td>\n      <td>2.327812e+07</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_scenarios_of_interest = 5\n",
+    "\n",
+    "results_of_interest = aggregated_outcomes_provinces.sort_values(by='total_cost[€]', ascending=True).head(n_scenarios_of_interest)\n",
+    "\n",
     "with open(r'..\\generated_datasets\\final_policies.pkl','wb') as pickle_file:\n",
     "    pickle.dump(results_of_interest, pickle_file)\n",
     "\n",
@@ -301,8 +340,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-21T09:26:08.376809400Z",
-     "start_time": "2023-06-21T09:26:08.349293500Z"
+     "end_time": "2023-06-21T09:33:53.390125600Z",
+     "start_time": "2023-06-21T09:33:53.352658Z"
     }
    }
   },
