--- a/Final Assignment EPA1361/Model and Notebooks/2b. MOEA.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/2b. MOEA.ipynb
@@ -3,23 +3,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Imports"
+    "In this Notebook, the MOEA analysis is performed, as described in chapter 3.2 of the report."
    ],
    "metadata": {
     "collapsed": false
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "### Imports"
+   ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-19T21:53:40.028472900Z",
-     "start_time": "2023-06-19T21:53:39.894696Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -70,17 +66,7 @@
    "cell_type": "markdown",
    "source": [
     "### Choice of robustness metrics:\n",
-    "\n",
-    "\n",
-    "| Robustness metric \t |    kind \t     |\n",
-    "|:-------------------:|:-------------:|\n",
-    "|   Damage Cost          \t   | Minimize    \t |\n",
-    "|          \tDeaths Score          |       \tMinimize       |\n",
-    "|          \t Dike Invest Cost         |       \tMinimize       |\n",
-    "|          RfR Invest Cost       |       \tMinimize       |\n",
-    "|          \tEvacuation Cost        |       \tMinimize       |\n",
-    "\n",
-    "Robustness score calculation: $ MSD = \\sigma ^{2} + \\mu ^{2} $"
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -89,7 +75,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Then, the model is loaded, and logging is set."
+    "The model is loaded, and logging method is set."
    ],
    "metadata": {
     "collapsed": false
@@ -123,7 +109,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The results from the basecase open exploration, which includes the worst scenarios, are loaded into a Pandas DataFrame."
+    "The results from the basecase open exploration, which includes the 20 worst scenarios, are loaded into a Pandas DataFrame."
    ],
    "metadata": {
     "collapsed": false
@@ -175,7 +161,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "To calculate the robustness metrics, which are defined as the total annual damage, total expected number of deaths, total dike investment costs, total room for the river costs and total expected evacuation costs, lists of these variables are saved for later use."
+    "To calculate the robustness metrics, which are defined as the total annual damage, total expected number of deaths, total dike investment costs, total room for the river costs and total expected evacuation costs, lists of these variables are saved for later use.\n",
+    "\n",
+    "|  Robustness metric \t   |    kind \t     | Points included\t |\n",
+    "|:----------------------:|:-------------:|:----------------:|\n",
+    "| Damage Cost          \t | Minimize    \t |     A.4, A.5     |\n",
+    "|     \tDeaths Score      |       \tMinimize       |   A.4, A.5   \t   |\n",
+    "|   \t Dike Invest Cost   |       \tMinimize       |     A.4, A.5     |\n",
+    "|    RfR Invest Cost     |       \tMinimize       |      All \t       |\n",
+    "|    \tEvacuation Cost    |       \tMinimize       |      All \t       |\n"
    ],
    "metadata": {
     "collapsed": false
@@ -204,8 +198,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Then, the robustness metric is initiated into a function. For this, we chose LEG UIT.\n",
-    "Furthermore, maximalization and minimalization functions are initiated to use in the optimization process."
+    "Then, the robustness metric is initiated into a function. For this, we chose the Mean Square Deviation: $ MSD = \\sigma ^{2} + \\mu ^{2} $."
    ],
    "metadata": {
     "collapsed": false
@@ -221,7 +214,7 @@
     "    sumsumsum = sum(sum(sum(data)))\n",
     "\n",
     "    mean = np.mean(sumsumsum)\n",
-    "    iqr = sp.stats.iqr(sumsumsum) # + mean * 0.001\n",
+    "    iqr = sp.stats.iqr(sumsumsum)\n",
     "    result = np.square(mean) + np.square(iqr)\n",
     "\n",
     "    return result"
@@ -237,7 +230,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Then, we make the robustness functions and add constraints. We chose minimize and maximize, most conservative (Kwakkel, J. H., Eker, S., & Pruyt, E. (2016). How robust is a robust policy? Comparing alternative robustness metrics for robust decision-making. Robustness analysis in decision aiding, optimization, and analytics, 221-237.)"
+    "Then, we make the robustness functions and add constraints. We chose to minimize the functions, as this method is the most conservative (Kwakkel, J. H., Eker, S., & Pruyt, E. (2016). How robust is a robust policy? Comparing alternative robustness metrics for robust decision-making. Robustness analysis in decision aiding, optimization, and analytics, 221-237.)"
    ],
    "metadata": {
     "collapsed": false
@@ -249,7 +242,6 @@
    "outputs": [],
    "source": [
     "# robustness metrics\n",
-    "maximize = ScalarOutcome.MAXIMIZE\n",
     "minimize = ScalarOutcome.MINIMIZE\n",
     "\n",
     "robustness_functions = [\n",
@@ -289,7 +281,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Convergence metrics are loaded"
+    "Convergence metrics are loaded, which is used to track $\\epsilon$-progress"
    ],
    "metadata": {
     "collapsed": false
@@ -321,7 +313,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Finally, the model variables are set."
+    "Finally, the model variables are set. 30 000 function evaluations, as this was tested to be enough for the $\\epsilon$ to roughly stabilize. Epsilon values of 0.01, as this resulted in the desired outcome of policies."
    ],
    "metadata": {
     "collapsed": false
@@ -333,7 +325,7 @@
    "outputs": [],
    "source": [
     "# general input\n",
-    "nfe = int(30000) #make this large (2e4)\n",
+    "nfe = int(30000)\n",
     "epsilons = [0.01, ]*len(robustness_functions)"
    ],
    "metadata": {
@@ -348,7 +340,7 @@
    "cell_type": "markdown",
    "source": [
     "\n",
-    "Then, the model can be run. Results (pareto set of policies) are saved."
+    "Then, the model can be run. Results (pareto set of policies) are saved. A population size of 5 was chosen, as this LEG UIT."
    ],
    "metadata": {
     "collapsed": false
@@ -408,6 +400,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "$\\epsilon$-convergence graph, showing whether the $\\epsilon$ was converged."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "outputs": [
@@ -437,6 +438,15 @@
      "end_time": "2023-06-20T16:03:40.325211100Z",
      "start_time": "2023-06-20T16:03:39.640108Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Robustness score graph, to show the outcome of the robustness scores of the policies."
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
